Fix a couple of weird styling issues for main nav on mobile

--- a/source/_assets/stylesheets/components/nav.less
+++ b/source/_assets/stylesheets/components/nav.less
@@ -39,11 +39,12 @@
     });
   }
   .navbar-nav {
-    border-top: 1px solid @gray;
+    border-top: none;
     padding: 30px 0;
+    margin: 0;
     .media-up(@screen-tablet, {
-      border-top: none;
       padding: 0;
+      margin-top: 2px;
     });
   }
   .navbar-buttons {
